--- a/TwitterFavImageSave/Views/MainWindow.xaml
+++ b/TwitterFavImageSave/Views/MainWindow.xaml
@@ -1,18 +1,38 @@
-﻿<Window x:Class="TwitterFavImageSave.Views.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:prism="http://prismlibrary.com/"
-        prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="{Binding Title}" Height="350" Width="525">
-    <Grid>
-        <!--<ContentControl prism:RegionManager.RegionName="ContentRegion">-->
-        <StackPanel Orientation="Vertical">
-            <Button x:Name="First" Content="認証開始" Command="{Binding FirstCommand}" />
-            <TextBox x:Name="InputPin" Text="{Binding Pincode, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-            <TextBox x:Name="InputMessage" Text="{Binding Message, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-            <Button x:Name="Second" Content="ツイート" Command="{Binding SecondCommand}" />
-            <Label x:Name="Result" Content="{Binding ResultMessage, UpdateSourceTrigger=PropertyChanged}" />
-        </StackPanel>
-        <!--</ContentControl>-->
-    </Grid>
-</Window>
+﻿<Controls:MetroWindow x:Class="TwitterFavImageSave.Views.MainWindow"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+                      xmlns:prism="http://prismlibrary.com/"
+                      prism:ViewModelLocator.AutoWireViewModel="True"
+                      TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+                      TextElement.FontWeight="Regular"
+                      TextElement.FontSize="13"
+                      TextOptions.TextFormattingMode="Ideal"
+                      TextOptions.TextRenderingMode="Auto"
+                      Background="{DynamicResource MaterialDesignPaper}"
+                      FontFamily="{DynamicResource MaterialDesignFont}"
+                      TitleCaps="False"
+                      Title="{Binding Title}"
+                      TitleForeground="White"
+                      Height="768" Width="1024">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Closing">
+            <i:InvokeCommandAction Command="{Binding CmdWindowClosing}" CommandParameter="{Binding}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+    <materialDesign:DialogHost DialogContent="{Binding Path=DialogView}" IsOpen="{Binding Path=IsDialogOpen}">
+        <Grid>
+            <!--<ContentControl prism:RegionManager.RegionName="ContentRegion">-->
+            <!--<StackPanel Orientation="Vertical" Grid.RowSpan="2">
+                <Button x:Name="First" Content="認証開始" Command="{Binding FirstCommand}" />
+                <TextBox x:Name="InputPin" Text="{Binding Pincode, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBox x:Name="InputMessage" Text="{Binding Message, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <Button x:Name="Second" Content="ツイート" Command="{Binding SecondCommand}" />
+                <Label x:Name="Result" Content="{Binding ResultMessage, UpdateSourceTrigger=PropertyChanged}" />
+            </StackPanel>-->
+            <!--</ContentControl>-->
+        </Grid>
+    </materialDesign:DialogHost>
+</Controls:MetroWindow>
