--- a/TwitterFavImageSave/UserControls/MaterialDialogOkScroll.xaml
+++ b/TwitterFavImageSave/UserControls/MaterialDialogOkScroll.xaml
@@ -18,13 +18,7 @@
         </Grid>
         <Grid Grid.Row="1">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Content="OK" IsDefault="True" Style="{DynamicResource MaterialDesignFlatButton}">
-                    <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="Click">
-                            <!--<l:LivetCallMethodAction MethodTarget="{Binding}" MethodName="AcceptDialog"/>-->
-                        </i:EventTrigger>
-                    </i:Interaction.Triggers>
-                </Button>
+                <Button Content="OK" IsDefault="True" Command="{Binding DispatchDialogOkCommand}" Style="{DynamicResource MaterialDesignFlatButton}" />
             </StackPanel>
         </Grid>
     </Grid>
